<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_refresh"
            android:icon="@drawable/ic_menu_refresh"
            android:title="@string/refresh"
            android:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/menu_user_info"
            android:icon="@drawable/ic_menu_info_details"
            android:title="@string/user_info"
            android:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/menu_about"
            android:title="@string/about"
            />
    <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_menu_close_clear_cancel"
            android:title="@string/log_out"
            />
</menu>