<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_long_name"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textSize="20dp"/>

    <ImageView
            android:layout_width="391dp"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:src="@drawable/zangle_logo"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:id="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="20dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_author"
            android:id="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version_text"
            android:id="@+id/version"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView2"/>

</RelativeLayout>